<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/CrearCuentaTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/handfond"
            android:textSize="25sp"
            android:gravity="center"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="registro.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/NombreEt"
                android:hint="@string/NombreEt"
                android:inputType="textPersonName|textCapWords"
                android:fontFamily="@font/handfond"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_nombres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/CorreoEt"
                android:hint="@string/CorreoEt"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/handfond"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/Contrasena"
                android:hint="@string/Contrasena"
                android:inputType="textPassword"
                android:fontFamily="@font/handfond"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/ConfirmarcontrasenaEt"
                android:hint="@string/ConfirmarContreasenaEt"
                android:inputType="textPassword"
                android:fontFamily="@font/handfond"
                android:padding="20dp"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/icono_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/RegistrarUsuario"
            android:text="@string/RegistrarUsuario"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/handfond"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/TengounaCuentatxt"
            android:text="@string/TengounaCuentaTXT"
            android:fontFamily="@font/handfond"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>
