<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tv_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/handfond"
            android:gravity="center"
            android:text="@string/IniciarSesionTXT"
            android:textSize="25dp"
            android:layout_marginBottom="16dp" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="iniciar_sesion.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/CorreoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CorreoLogin"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/icono_correo"
                android:drawablePadding="10dp"
                android:fontFamily="@font/handfond"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PassLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PassLogin"
            app:passwordToggleEnabled="true"
            android:padding="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/icono_password"
                android:drawablePadding="10dp"
                android:fontFamily="@font/handfond"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Btn_Logeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/handfond"
            android:text="@string/Btn_Logeo"/>

        <TextView
            android:id="@+id/UsuarioNuevoTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/handfond"
            android:gravity="center"
            android:text="@string/UsuarioNuevoTxt"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
